--- a/sass/page/_homepage.scss
+++ b/sass/page/_homepage.scss
@@ -15,6 +15,13 @@
     width: 100%;
   }
 
+  .btn {
+    display: block;
+    margin: 0 auto;
+    max-width: 200px;
+    padding: 6px 12px;
+  }
+
   @include at-breakpoint($desktop) {
     .header-sticky-wrapper {
       position: static;
@@ -39,7 +46,6 @@
     }
     .sub-menu.sticky {
       margin-top: 61px;
-      background-color: rgba(white, .9);
     }
   }
 
