調整 load more 按鈕顏色

--- a/sass/setup/_variable.scss
+++ b/sass/setup/_variable.scss
@@ -8,7 +8,7 @@ $color-black-light : #666;
 $color-gray-dark: #999;
 $color-gray         : #aaa;
 $color-gray-light   : #ddd;
-$color-gray-white   : #f1f1f1;
+$color-gray-white   : #e7e7e7;
 
 // blue
 $color-blue-light   : #dee9ef;
