--- a/sass/partial/_post-list.scss
+++ b/sass/partial/_post-list.scss
@@ -73,6 +73,18 @@
     @include trailer(0);
   }
 
+  .pageaction {
+    text-align: center;
+    @include leader(2);
+    .btn {
+      display: block;
+      margin: 0 auto;
+      max-width: 200px;
+      padding: 6px 12px;
+    }
+
+  }
+
 }
 
 .post-list_list-style {
