更新 sub-menu 「全部」->「全部文章」

--- a/posts/index.html.slim
+++ b/posts/index.html.slim
@@ -4,11 +4,11 @@
 .content.has-sub-menu
   .post-list.post-list_block-style
     .container
-      h2.post-list-title= "最新消息"
+      h2.post-list-title= "全部文章"
       .post-list-content
         - 6.times do |i|
           .post-item
-            a.post-image style="background-image: url('/images/post-1.jpg')" href="/posts/single-post-page.html"
+            a.post-image style="background-image: url('/images/post-2.jpg')" href="/posts/single-post-page.html"
             .post-content-wrap
               .post-meta
                 ul.post-category
