--- a/search-result/index.html.slim
+++ b/search-result/index.html.slim
@@ -10,13 +10,12 @@
           .post-item
             a.post-image href="/posts/single-post-page.html" style="background-image: url('http://placehold.it/300x200')"
             .post-meta
-              .category
+              .date 2015.7.22
               ul.post-category
                 li.post-category-item: a href="/categories/show.html" 政策
                 // 若出現兩者以上議題的架構
                 / li.post-category-item: a href="/categories/show.html" 活動
                 / li.post-category-item: a href="/categories/show.html" 故事
-              span.date 2015.7.22
             a.post-content href="/posts/single-post-page.html"
               h3.post-title= zh_lorem_sentence
               p.post-summary 民主進步黨主席暨總統參選人蔡英文今(25)日下午至桃園連跑兩場行程，除前往祥儀機器人夢工廠及桃園市婦女館參訪，傍晚則是出席在地希望生活節，與民...
