--- a/sass/partial/_aside-posts.scss
+++ b/sass/partial/_aside-posts.scss
@@ -42,11 +42,11 @@
     .post-category-item {
       display: inline-block;
       text-decoration: none;
-      &:after {
+      &:before {
         content: ",";
         margin-right: 3px;
       }
-      &:last-child:after {
+      &:last-child:before {
         content: "|";
         margin: 0 6px;
       }
